# seastar-visualizer

./: README.md  update.sh
client/: bun.lockb  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  index.tsx  types.ts
client/src/components/: Canvas.tsx  ColorKey.tsx  Controls.tsx  Footer.tsx  NavHeader.tsx  StatusText.tsx
client/src/context/: GridContext.tsx
client/src/routes/: Home.tsx  NotFound.tsx
client/src/utils/: clamp.ts
server/: Cargo.toml
server/src/: error.rs  handlers.rs  main.rs
