[package]
name = "seastar-visualizer"
authors = ["Rob Wagner <rob@sombia.com>"]
repository = "https://github.com/robertwayne/seastar-visualizer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7" }
dotenvy = { version = "0.15" }
mimalloc = "0.1"
seastar = { git = "https://github.com/robertwayne/seastar", features = [
    "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = [
    "compression-br",
    "cors",
    "fs",
    "trace",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
